--- a/etc2.html
+++ b/etc2.html
@@ -2,6 +2,16 @@
 <html>
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2FNW9NM1Z7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2FNW9NM1Z7');
+</script>
+  
   <title>WEB1 - HTML</title>
   <meta charset="utf-8">
 </head>
