--- a/test.html
+++ b/test.html
@@ -4,3 +4,5 @@
 <br>줄바꿈 테스트 br태그 사용 <br>
 <br>
 <p>텍스트 안에 <u>언더라인과</u> <strong>스트롱 </strong>사용하여 문장 꾸미는 기초 단계</p>
+<p>이미지 삽입 a태그 사용 a href="#" img src="$" a태그 닫기</p>
+<a href="https://kimfrodo.github.io/web/test." target="_blank" title="kimfrodo"><img src="http://web.xpedite.co.kr/Web/Images/logo_bnc.png"></a>
