--- a/test.html
+++ b/test.html
@@ -1,8 +1,9 @@
-<h1>Highlight</h1>
-<h2 style="font-size:60">Highlight2</h2>
+<h1>Hyper Text Media Language</h1>
+<h2 style="font-size:60">h2 태그에 style font-size로 크기 증가</h2>
 <p>줄바꿈 테스트 p태그 사용</p>
 <br>줄바꿈 테스트 br태그 사용 <br>
 <br>
 <p>텍스트 안에 <u>언더라인과</u> <strong>스트롱 </strong>사용하여 문장 꾸미는 기초 단계</p>
 <p>이미지 삽입 a태그 사용 a href="#" img src="$" a태그 닫기</p>
-<a href="https://kimfrodo.github.io/web/test" target="_blank" title="kimfrodo"><img src="http://web.xpedite.co.kr/Web/Images/logo_bnc.png"></a>
+<p style="color:rgb(237, 167, 216)">이미지 삽입에 블랭크로 새창 띄워서 링크 넣고 타이틀은 kimfrodo로 입력. p태그에 style로 margin-top 값 삽입</p>
+<p style="margin-top:50px"><a href="https://kimfrodo.github.io/web/test." target="_blank" title="kimfrodo"><img src="http://web.xpedite.co.kr/Web/Images/logo_bnc.png"></a></p>
