--- a/index.html
+++ b/index.html
@@ -46,6 +46,33 @@
 <br>
 <br>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
@@ -60,12 +87,11 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 <!--End of Tawk.to Script-->
 
-
 <!-- 라이브리 시티 설치 코드 -->
 <div id="lv-container" data-id="city" data-uid="MTAyMC80NjczMC8yMzIzOQ==">
 <script type="text/javascript">
   window.livereOptions = {
-refer: '(https://kimfrodo.github.io/web/test)'
+refer: '(https://kimfrodo.github.io/web/index)'
 };
    (function(d, s) {
        var j, e = d.getElementsByTagName(s)[0];
@@ -82,10 +108,6 @@ refer: '(https://kimfrodo.github.io/web/test)'
 <noscript>라이브리 댓글 작성을 위해 JavaScript를 활성화 해주세요</noscript>
 </div>
 <!-- 시티 설치 코드 끝 -->
-
-
-
-
 
 </body>
 </html>
