--- a/index.html
+++ b/index.html
@@ -1,50 +1,103 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>김프로도</title>
-<style>
- ul li{
-   border:1px solid red;
-   padding:10px;
-   margin:10px;
-   display:inline;
- }
-</style>
-  </head>
+
+<head>
+  <meta charset="utf-8">
+  <title>김프로도 html 파일</title>
+  <link rel="stylesheet" href="ref.css">
+</head>
 
 <body>
- <h1>Hyper Text Media Language</h1>
- <h2 style="font-size:70px">h2 태그에 style font-size로 크기 증가</h2>
- <ul>
-   <p><li>margin:10px, padding:10px Ul 태그 사용하여 LI 삽입 첫번째</li></p>
-   <p><li>margin:10px, padding:10px Ul 태그 사용하여 LI 삽입 두번째</li></p>
-   <p><li>margin:10px, padding:10px Ul 태그 사용하여 LI 삽입 세번째</li></p>
- </ul>
- <br>
- 리스트 삽입
- <ol type="a">
-  <li>OL태그 삽입 type=a 변경. 기본은 1,2,3</li>
-  <li>OL태그 삽입 type=a 변경. 기본은 1,2,3</li>
-  <li>OL태그 삽입 type=a 변경. 기본은 1,2,3</li>
- </ol>
+
+  <h1 style="border:5px solid gray; padding:20px; margin:20px; display:block; width:100%">Hyper Text Media Languagee h1 태그에 style로 border solid gray padding 20px margin 20px display inline width 100% 설정</h1>
+  <h2 style="font-size:70px">h2 태그에 style font-size로 크기 증가</h2>
+  <ul>
+    <p>
+      <li class="a">head에 style로 margin:10px; padding:10px; display:inline; Ul 태그 사용하여 LI 삽입 첫번째</li>
+    </p>
+    <p>
+      <li class="a">head에 style로 margin:10px; padding:10px; display:inline; Ul 태그 사용하여 LI 삽입 첫번째</li>
+    </p>
+    <p>
+      <li class="a">head에 style로 margin:10px; padding:10px; display:inline; Ul 태그 사용하여 LI 삽입 첫번째</li>
+    </p>
+  </ul><br>
+  <p style="font-size:30px">head style에 ol li 태그로 color:yellow; font-size:50px, text-align:center 설정
+    <br> ol li a 태그로 color:black; text-decroration:none 설정 </p><br><br>
+  <ol>
+    <li><a href="HTML.html" target="_blank" title="html"> HTML </a></li>
+    <li><a href="CSS.html" target="_blank" title="CSS" style="font-size:20px; color:pink"> CSS a style="color:pink"로 이 행만 컬러 별도 지정</a></li>
+    <li><a href="Java Script.html" target="_blank" title="Java Script"> Java Script </a></li>
+  </ol>
+  <p style="font-size:50px"> &nbsp; </p>
+
+  <ul type="none" style="text-align:center; padding:20px; margin:10px; font-weight:bold">
+    <div id="divid">
+      <li>UL LI.a: Black</li>
+      <li>OL LI : Yellow</li>
+      <li>OL LI A : Blue</li>
+      <li>#sangsoori : Green</li>
+      <li>.josang9 : Orange</li>
+      <li>a.josang9 : Violet</li>
+    </div>
+  </ul>
+
+  <ol>
+    <li class="josang9"><a id="sangsoori" href="Java Script.html" target="_blank" title="Java Script"> ol li yellow, ol li a blue
+        ,class josang9, li class="josang9" 적용하여 순번은 오렌지 a id="#sangsoori" 적용하여 본문은 그린 </a></li>
+    <li id="sangsoori"><a class="josang9" href="Java Script.html" target="_blank" title="Java Script"> ol li yellow, ol li a blue, li id="sangsoori" 적용하여 순번은 그린, a class="josang9" 적용하여 본문이 오렌지여야 하나 style에 'a.josang9' 별도 선택자로 class가 등록되어 있어 a태그 밑에
+        a.josang9로 적용되어 본문 바이올렛</a></li>
+    <li id="sangsoori">
+      <p class="josang9"> ol li yellow, ol li a blue, li id="sangsoori" 적용하여 순번은 그린, 본문은 a태그 대신 p태그 사용하여 p class="josang9" 적용하여 본문은 오렌지, p태그여서 하이퍼링크 없음</p>
+    </li>
+    <li><a class"josang9" id="sangsoori" href="Java Script.html" target="_blank" title="Java Script"> ol li yellow, ol li a blue, a class=josang9와 id=sangsoori 선택자 모두 적용하여 id값이 최종 적용되어 본문 green, li에 아이디나 클래스 적용 안해서 순번으 yellow, 정렬은 li속성값 align:center
+      </a></li>
+  </ol>
+  <br>
+
+  <p style="margin:100px; padding:100px">줄바꿈 테스트 p태그 사용 마진100 패딩100 </p>
+  <br>줄바꿈 테스트 br태그 사용 <br><br>
+  <p>텍스트 안에 <u>언더라인과</u> <strong>스트롱 </strong>사용하여 문장 꾸미는 기초 단계</p>
+  <p style>이미지 삽입 a태그 사용 a href="#" img src="$" a태그 닫기</p>
+  <p style="color:rgb(237, 167, 216); font-size:30px"><strong><u>background-color:blue; font-weight:bold; 이미지 삽입에 블랭크로 새창 띄워서 링크 넣고 타이틀은 kimfrodo로 입력. p태그에 style로 margin-top 값 삽입</u></strong></p>
+  <p style="margin-top:50px">
+    <center><a href="https://kimfrodo.github.io/web/index" target="_blank" title="kimfrodo">
+        <img src="http://web.xpedite.co.kr/Web/Images/logo_bnc.png" width="800">
+      </a></center>
+  </p><br>
+  <p style="font-weight:bold; line-height:5; background-color:rgb(173, 205, 224)"> font-weight:bold 굵은 글씨, line-height:5 줄 아래위 간격, background-color:color picker rgb </p>
+  <p style="font-size:30px">&nbsp;</p>
+  <p> 미디어쿼리 반응형 responsive 설정. head style에 아래 소스 입력 <br>@media(max-width:1400px) { body {
+    background-color:lightgreen; } }<br>grid나 기타 여러가지 값 설정 가능</p>
+
+  <p style="font-size:30px">&nbsp;</p>
+  <p>grid</p>
+  <p>head style에 id 지정해 주고 속성과 값 입력. #grid, display:grid; grid-template-columns, rows: auto 100px 1fr 2fr 등으로 왼쪽부터 표 구성. auto는 같은 값으로 나누는? px는 특정 크기 입력, 1fr은 남은 공간의 1/3, 2fr은 2/3 <br> grid 박스 안에 padding으로 grid border 안으로 간격 넣어줌.</p>
+  <div id="grid">
+    <div>&nbsp;a</div>
+    <div style="padding:10px">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+    <div>2</div>
+    <div>3</div>
+    </div>
+
+  <p style=font-size:10px>&nbsp;</p>
+  <p style="border:5px solid gray; display:inline; padding:15px; margin:15px"> 줄을 그어 봅시다<br>br태그 줄바꿈<br>현재 border를 5px solid gray로 설정 후에 <span style="color:red">display를 inline으로 설정</span>border가 inline이기 때문에 3행이 각각 박스를 구현함. </p>
+
+  <p style="border:5px solid gray; display:block; padding:15px; margin:15px"> 줄을 그어 봅시다<br> br태그 줄바꿈 현재 border를 5px solid gray로 설정 후에 <span style="color:red">display를 block으로 설정</span></p>
+
+  <p style="border:5px solid gray; display:inline-block; padding:15px; margin:15px"> 줄을 그어 봅시다<br> br태그 줄바꿈 현재 border를 5px solid gray로 설정 후에 <span style="color:red">display를 inline-block으로 설정</span></p>
+
+  <p style="border:5px solid gray; display:inline; padding:15px; margin:15px; border-top:none; border-bottom:none"> 앞줄이 inline-block이라서 br 태그 나오기 전까지 줄바꿈 없이 이어짐 줄을 그어 봅시다 <br> br태그 줄바꿈 현재 border를 5px solid gray로 설정 후에 <span style="color:red">display를 inline으로 설정 border-top, bottom : none</span></p>
+
+  <p style="border:5px solid gray; display:block; padding:15px; margin:15px; border-top:none; border-bottom:none"> 줄을 그어 봅시다<br> br태그 줄바꿈 현재 border를 5px solid gray로 설정 후에 <span style="color:red">display를 block으로 설정 border-top, bottom : none</span></p>
+
+  <p style="border:5px solid gray; display:inline-block; padding:15px; margin:15px; border-top:none; border-bottom:none"> 줄을 그어 봅시다 leftm right, top,<br> br태그 줄바꿈 현재 border를 5px solid gray로 설정 후에 <span style="color:red">display를 inline-block으로 설정 border-top, bottom : none</span></p>
 
 
-<br>
-<p>줄바꿈 테스트 p태그 사용</p>
-<br>줄바꿈 테스트 br태그 사용 <br>
-<br>
-<p>텍스트 안에 <u>언더라인과</u> <strong>스트롱 </strong>사용하여 문장 꾸미는 기초 단계</p>
-<p>이미지 삽입 a태그 사용 a href="#" img src="$" a태그 닫기</p>
-<p style="color:rgb(237, 167, 216); font-size:30px"><strong><u>이미지 삽입에 블랭크로 새창 띄워서 링크 넣고 타이틀은 kimfrodo로 입력. p태그에 style로 margin-top 값 삽입</u></strong></p>
-<p style="margin-top:50px"><a href="https://kimfrodo.github.io/web/test" target="_blank" title="kimfrodo">
-<center><img src="http://web.xpedite.co.kr/Web/Images/logo_bnc.png" width=300></center></a></p>
-<br>
-<p style="font-size:30px">동영상 삽입, width, height 재생 크기 창 설정, allowfullscreen 입력</p>
-<p><iframe src="https://www.youtube.com/embed/jSJM9iOiQ1g" width="800" height="600" frameborder="0" allowfullscreen></iframe></p>
 
-<br>
-<br>
+  <p style="font-size:30px">동영상 삽입, width, height 재생 크기 창 설정, allowfullscreen 입력 <br>
+    iframe src="https://www.youtube.com/embed/jSJM9iOiQ1g" width="800" height="600" frameborder="0" <span style="color:red">allowfullscreen</span></p>
+  <p><iframe src="https://www.youtube.com/embed/jSJM9iOiQ1g" width="800" height="600" frameborder="0" allowfullscreen></iframe></p><br><br>
 
 
 
@@ -54,60 +107,46 @@
 
 
 
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+    var Tawk_API = Tawk_API || {},
+      Tawk_LoadStart = new Date();
+    (function() {
+      var s1 = document.createElement("script"),
+        s0 = document.getElementsByTagName("script")[0];
+      s1.async = true;
+      s1.src = 'https://embed.tawk.to/5d8858f8c22bdd393bb7360d/default';
+      s1.charset = 'UTF-8';
+      s1.setAttribute('crossorigin', '*');
+      s0.parentNode.insertBefore(s1, s0);
+    })();
+  </script>
+  <!--End of Tawk.to Script-->
 
+  <!-- 라이브리 시티 설치 코드 -->
+  <div id="lv-container" data-id="city" data-uid="MTAyMC80NjczMC8yMzIzOQ==">
+    <script type="text/javascript">
+      window.livereOptions = {
+        refer: '(https://kimfrodo.github.io/web/index)'
+      };
+      (function(d, s) {
+        var j, e = d.getElementsByTagName(s)[0];
 
+        if (typeof LivereTower === 'function') {
+          return;
+        }
 
+        j = d.createElement(s);
+        j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
+        j.async = true;
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/5d8858f8c22bdd393bb7360d/default';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
-
-<!-- 라이브리 시티 설치 코드 -->
-<div id="lv-container" data-id="city" data-uid="MTAyMC80NjczMC8yMzIzOQ==">
-<script type="text/javascript">
-  window.livereOptions = {
-refer: '(https://kimfrodo.github.io/web/index)'
-};
-   (function(d, s) {
-       var j, e = d.getElementsByTagName(s)[0];
-
-       if (typeof LivereTower === 'function') { return; }
-
-       j = d.createElement(s);
-       j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
-       j.async = true;
-
-       e.parentNode.insertBefore(j, e);
-   })(document, 'script');
-</script>
-<noscript>라이브리 댓글 작성을 위해 JavaScript를 활성화 해주세요</noscript>
-</div>
-<!-- 시티 설치 코드 끝 -->
+        e.parentNode.insertBefore(j, e);
+      })(document, 'script');
+    </script>
+    <noscript>라이브리 댓글 작성을 위해 JavaScript를 활성화 해주세요</noscript>
+  </div>
+  <!-- 시티 설치 코드 끝 -->
 
 </body>
+
 </html>
