--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ shape 영역의 형태를 지정 (defalut : 화면 전체 / rect : 사각형 / c
 &lt;IMG width="740" height="1047" src="./EPI20191.jpg" border="0" usemap="#Map"&gt; &lt;MAP name="Map" id="Map"&gt;
   &lt;AREA href="https://electricindonesia.com/" shape="rect" coords="116,331,367,437"&gt;<br>url 주소 대신에 mailto:jykim@xpbnc.co.kr 이메일 주소도 가능 <br>a href 태그에도 적용 가능한데 IE에서는 구현 안되고 크롬에서는 구현됨.  <br><span style="color:red; font-size:30px font-weight:bold"> 만약 이미지를 100% 처럼 %로 설정하거나 이미지의 크기를 변경할 경우 능동적으로 따라 움직이지 못하기 때문에 반응할 수 없음. 좌표이기 때문에 fucking</span> </p>
 
-<a href="http://web.xpedite.co.kr/Web/" target="_blank" title="통합웹"> <img src="./1.jpg" alt="엑스퍼다이트" usemap="#sangsoori9"> <map name="sangsoori9" id="sangsoori9">
+<a href="http://web.xpedite.co.kr/Web/" target="_blank" title="통합웹"> <img src="./blob/master/1.jpg" alt="엑스퍼다이트" usemap="#sangsoori9"> <map name="sangsoori9" id="sangsoori9">
   <area shape="rect" coords="323,14,457,48" href="http://web.xpedite.co.kr/Web/Mobile.php" target="_blank" title="Mobile" alt="test">
   <area shape="rect" coords="188,14,322,48" href="http://web.xpedite.co.kr/Web/Fax.php" target="_blank" title="Fax" alt="test">
   <area shape="rect" coords="457,14,592,48" href="http://web.xpedite.co.kr/Web/RFax.php" target="_blank" title="RFax" alt="test">
