--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
   em은 기본 font-size의 배율을 뜻하는 것으로 h1:2em:32px /> h2:1.5em:24px이다</p>
   <ul>
     <p>
-      <li class="a">head에 style로 margin:10px; padding:10px; display:inline; Ul 태그 사용하여 LI 삽입 첫번째</li>
+      <li class="a">head에 style로 margin:10px; padding:10px; display:block; Ul 태그 사용하여 LI 삽입 첫번째</li>
     </p>
     <p>
-      <li class="a">head에 style로 margin:10px; padding:10px; display:inline; Ul 태그 사용하여 LI 삽입 첫번째</li>
+      <li class="a">head에 style로 margin:10px; padding:10px; display:block; Ul 태그 사용하여 LI 삽입 첫번째</li>
     </p>
     <p>
-      <li class="a">head에 style로 margin:10px; padding:10px; display:inline; Ul 태그 사용하여 LI 삽입 첫번째</li>
+      <li class="a">head에 style로 margin:10px; padding:10px; display:block; Ul 태그 사용하여 LI 삽입 첫번째</li>
     </p>
   </ul><br>
 
